# lawn-mowing-robot

./: .gitignore  CMakeLists.txt  README.md  Report.docx  package.xml
launch/: a1.launch
lawn_explorer/: CMakeLists.txt  package.xml
lawn_explorer/src/: explorer_node.py  go_to_goals.py  interactive_goals.py  web_interface.py
lawn_explorer/src/templates/: hello.html
lawn_map_publisher/: CMakeLists.txt  package.xml
lawn_map_publisher/launch/: a1.launch
lawn_map_publisher/maps/: map02.xcf  maporhan.pgm  maporhan.yaml
lawn_map_publisher/src/: GazeboMapPublisher.cpp  lawn_map_publisher.cpp
lawn_map_publisher/worlds/: dunyam.world  willow_garage_with_map_publ.world
lawn_world/: CMakeLists.txt  package.xml
lawn_world/launch/: lawn.launch
lawn_world/maps/: map01.pgm  map02-e.pgm  map02-e.yaml  map02.pgm  map03.pgm  map03.yaml
lawn_world/worlds/: lawn.world
src/: lawn_explorer.py  lawn_map_publisher.cpp
worlds/: lawn.world  world.world
